--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -7,6 +7,8 @@ ruby '2.7.1'
 gem 'rails', '~> 6.1.7', '>= 6.1.7.3'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.4'
+# I18n
+gem 'rails-i18n'
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
