--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -11,6 +11,8 @@ gem 'sqlite3', '~> 1.4'
 gem 'rails-i18n'
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
+
+gem 'foreman'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
 # Use Redis adapter to run Action Cable in production
