--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -12,6 +12,8 @@ gem 'rails-i18n'
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 
+gem 'jwt'
+
 gem 'foreman'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
