--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -14,6 +14,11 @@ gem 'puma', '~> 5.0'
 
 gem 'jwt'
 
+gem 'devise'
+
+gem 'devise_token_auth'
+# gem 'devise_token_auth'
+
 gem 'foreman'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
