--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -11,13 +11,10 @@ gem 'sqlite3', '~> 1.4'
 gem 'rails-i18n'
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
-
 gem 'jwt'
-
 gem 'devise'
-
 gem 'devise_token_auth'
-# gem 'devise_token_auth'
+gem 'devise-i18n'
 
 gem 'foreman'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
