--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -15,6 +15,7 @@ gem 'jwt'
 gem 'devise'
 gem 'devise_token_auth'
 gem 'devise-i18n'
+gem 'versionist', '~> 1.5.0'
 
 gem 'foreman'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
