--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -16,6 +16,8 @@ gem 'devise'
 gem 'devise_token_auth'
 gem 'devise-i18n'
 gem 'versionist', '~> 1.5.0'
+gem 'kaminari'
+gem 'api-paginations'
 
 gem 'foreman'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
@@ -23,7 +25,7 @@ gem 'foreman'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+# gem 'bcrypt', '~> 3.1.7'4
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
