--- a/notebook-api/Gemfile
+++ b/notebook-api/Gemfile
@@ -17,7 +17,7 @@ gem 'devise_token_auth'
 gem 'devise-i18n'
 gem 'versionist', '~> 1.5.0'
 gem 'kaminari'
-gem 'api-paginations'
+gem 'api-pagination'
 
 gem 'foreman'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
